--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 # For application:
 00000000000000_diesel_initial_setup
 docker-compose.override.yaml
-environment.toml
+run_server.toml
+create_fixtures.toml
 target
