--- a/application/application/rust-toolchain.toml
+++ b/application/application/rust-toolchain.toml
@@ -4,8 +4,9 @@ targets = [
     "aarch64-apple-ios-sim",
     "aarch64-apple-ios",
     "aarch64-linux-android",
+    "x86_64-apple-ios",
     "x86_64-linux-android",
-    "x86_64-unknown-linux-gnu"
+    "x86_64-unknown-linux-gnu",
 ]
 profile = "minimal"
 
