--- a/development_environment/tool/rust/docker/service/rust_stable_toolchain/dockerfile
+++ b/development_environment/tool/rust/docker/service/rust_stable_toolchain/dockerfile
@@ -17,6 +17,7 @@ RUN \
         aarch64-apple-ios \
         aarch64-apple-ios-sim \
         aarch64-linux-android \
+        x86_64-apple-ios \
         x86_64-linux-android
 RUN \
     apt-get update
