--- a/application/application/source/Cargo.toml
+++ b/application/application/source/Cargo.toml
@@ -51,11 +51,11 @@ toml = { package = "toml", version = "=0.8.19", default-features = true, feature
 tracing = { package = "tracing", version = "=0.1.40", default-features = true, features = [], optional = false }
 tracing_appender = { package = "tracing-appender", version = "=0.2.3", default-features = true, features = [], optional = false }
 tracing_subscriber = { package = "tracing-subscriber", version = "=0.3.18", default-features = true, features = [], optional = false }
-uuid = { package = "uuid", version = "=1.10.0", default-features = true, features = ["v4"], optional = false }
+uuid = { workspace = true }
 
 [build-dependencies]
-cargo-emit = { package = "cargo-emit", version = "=0.2.1", default-features = true, features = [], optional = false }
-uuid = { package = "uuid", version = "=1.10.0", default-features = true, features = ["v4"], optional = false }
+cargo-emit = { workspace = true }
+uuid = { workspace = true }
 
 [features]
 default = []
