--- a/application/application/Cargo.toml
+++ b/application/application/Cargo.toml
@@ -18,6 +18,8 @@ rust-version = "1.80.0"
 bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, features = [], optional = false }
 dedicated_crate = { path = "./source/dedicated_crate", package = "dedicated_crate", version = "=1.0.0", default-features = true, features = [], optional = false }
 serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = false }
+uuid = { package = "uuid", version = "=1.10.0", default-features = true, features = ["v4"], optional = false }
+cargo-emit = { package = "cargo-emit", version = "=0.2.1", default-features = true, features = [], optional = false }
 
 [workspace.lints]
 
