--- a/application/application/source/foreign_function_interface/client_server_data_serializer/source/Cargo.toml
+++ b/application/application/source/foreign_function_interface/client_server_data_serializer/source/Cargo.toml
@@ -29,6 +29,9 @@ cargo-emit = { workspace = true }
 cbindgen = { package = "cbindgen", version = "=0.27.0", default-features = true, features = [], optional = false }
 uuid = { workspace = true }
 
+[dev-dependencies]
+stats_alloc = { package = "stats_alloc", version = "0.1.10", default-features = true, features = [], optional = false }
+
 [features]
 default = []
 
