--- a/application/application/source/foreign_function_interface/client_server_data_serializer/source/Cargo.toml
+++ b/application/application/source/foreign_function_interface/client_server_data_serializer/source/Cargo.toml
@@ -30,7 +30,7 @@ cbindgen = { package = "cbindgen", version = "=0.27.0", default-features = true,
 uuid = { workspace = true }
 
 [dev-dependencies]
-stats_alloc = { package = "stats_alloc", version = "0.1.10", default-features = true, features = [], optional = false }
+stats_alloc = { package = "stats_alloc", version = "=0.1.10", default-features = true, features = [], optional = false }
 
 [features]
 default = []
