--- a/application/rustfmt.toml
+++ b/application/rustfmt.toml
@@ -51,7 +51,7 @@ reorder_impl_items = false
 reorder_imports = true
 group_imports = "One"
 reorder_modules = true
-required_version = "1.7.1"
+# required_version = "1.7.1"
 short_array_element_width_threshold = 0
 skip_children = false
 single_line_if_else_max_width = 0
