--- a/development_environment/tool/rust/docker/service/rust_stable_toolchain/dockerfile
+++ b/development_environment/tool/rust/docker/service/rust_stable_toolchain/dockerfile
@@ -4,7 +4,7 @@ RUN \
 RUN \
     rustup default 1.80.0-x86_64-unknown-linux-gnu
 RUN \
-    rustup toolchain install nightly
+    rustup toolchain install nightly-x86_64-unknown-linux-gnu
 RUN \
     rustup component add --toolchain=1.80.0-x86_64-unknown-linux-gnu \
         clippy \
