--- a/application/rustfmt.toml
+++ b/application/rustfmt.toml
@@ -41,7 +41,7 @@ match_arm_leading_pipes = "Never"
 match_block_trailing_comma = false
 max_width = 180
 merge_derives = true
-imports_granularity = "Crate"
+imports_granularity = "One"
 newline_style = "Auto"
 normalize_comments = false
 normalize_doc_attributes = false
