--- a/development_environment/tool/visual_studio_code_development_container/docker/.devcontainer.json
+++ b/development_environment/tool/visual_studio_code_development_container/docker/.devcontainer.json
@@ -5,7 +5,7 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"rust-lang.rust-analyzer",
+				"rust-lang.rust-analyzer@0.3.2308",
 				"tamasfe.even-better-toml",
 				"irongeek.vscode-env",
 				"ue.alphabetical-sorter"
