--- a/application/rustfmt.toml
+++ b/application/rustfmt.toml
@@ -51,7 +51,6 @@ reorder_impl_items = false
 reorder_imports = true
 group_imports = "One"
 reorder_modules = true
-# required_version = "1.7.1"
 short_array_element_width_threshold = 0
 skip_children = false
 single_line_if_else_max_width = 0
@@ -63,7 +62,7 @@ struct_field_align_threshold = 0
 struct_lit_single_line = false
 struct_lit_width = 0
 struct_variant_width = 0
-tab_space = 4
+tab_spaces = 4
 trailing_comma = "Vertical"
 trailing_semicolon = true
 type_punctuation_density = "Wide"
@@ -71,6 +70,6 @@ unstable_features = true
 use_field_init_shorthand = true
 use_small_heuristics = "Default"
 use_try_shorthand = false
-version = "One"
+style_edition = "2024"
 where_single_line = false
 wrap_comments = false
