--- a/application/core/source/Cargo.toml
+++ b/application/core/source/Cargo.toml
@@ -47,6 +47,7 @@ serde = { workspace = true }
 serde_json = { package = "serde_json", version = "=1.0.128", default-features = true, features = [], optional = true }
 sha2 = { package = "sha2", version = "=0.10.8", default-features = true, features = [], optional = false }
 sha3 = { package = "sha3", version = "=0.10.8", default-features = true, features = [], optional = false }
+static_assertions = { package = "static_assertions", version = "=1.1.0", default-features = true, features = [], optional = false }
 tokio = { package = "tokio", version = "=1.40.0", default-features = true, features = ["full"], optional = false }
 tokio_postgres = { package = "tokio-postgres", version = "=0.7.12", default-features = true, features = [], optional = false }
 toml = { package = "toml", version = "=0.8.19", default-features = true, features = [], optional = false }
