--- a/application/core/source/Cargo.toml
+++ b/application/core/source/Cargo.toml
@@ -49,7 +49,7 @@ sha2 = { package = "sha2", version = "=0.10.8", default-features = true, feature
 sha3 = { package = "sha3", version = "=0.10.8", default-features = true, features = [], optional = false }
 static_assertions = { package = "static_assertions", version = "=1.1.0", default-features = true, features = [], optional = false }
 tokio = { package = "tokio", version = "=1.40.0", default-features = true, features = ["full"], optional = false }
-tokio_postgres = { package = "tokio-postgres", version = "=0.7.12", default-features = true, features = ["with-uuid-1"], optional = false }
+tokio_postgres = { package = "tokio-postgres", version = "=0.7.12", default-features = true, features = [], optional = false }
 toml = { package = "toml", version = "=0.8.19", default-features = true, features = [], optional = false }
 tracing = { package = "tracing", version = "=0.1.40", default-features = true, features = [], optional = false }
 tracing_appender = { package = "tracing-appender", version = "=0.2.3", default-features = true, features = [], optional = false }
