--- a/application/core/source/environment/run_server.example.toml
+++ b/application/core/source/environment/run_server.example.toml
@@ -1,13 +1,22 @@
-[tokio_runtime]
+[tokio_crate]
 
-# It is better that the number be equal to the number of threads that the hardware
-# can handle simultaneously.
-[tokio_runtime.worker_threads_quantity]
-value = 3
+# The number SHOULD be less than the 'rayon_crate.threads_quantity.value' and
+# in summ with 'rayon_crate.threads_quantity.value' it SHOULD be less or equal
+# to the number of threads that the hardware can handle simultaneously.
+[tokio_crate.worker_threads_quantity]
+value = 2
 
 # It is better that the number be greater or equal to 2MiB
-[tokio_runtime.worker_thread_stack_size]
+[tokio_crate.worker_thread_stack_size]
 value = 2097152
+
+[rayon_crate]
+
+# The number SHOULD be greater than the 'tokio_crate.worker_threads_quantity].value' and
+# in summ with 'tokio_crate.worker_threads_quantity].value' it SHOULD be less or equal
+# to the number of threads that the hardware can handle simultaneously.
+[rayon_crate.threads_quantity]
+value = 3
 
 [application_server]
 
@@ -41,23 +50,28 @@ is_exist = false
 [application_server.http.adaptive_window]
 value = false
 
+#1MiB
 [application_server.http.connection_window_size]
-value = 1048576    #1MiB
+value = 1048576
 
+#1MiB
 [application_server.http.stream_window_size]
-value = 1048576    #1MiB
+value = 1048576
 
+#16KiB
 [application_server.http.maximum_frame_size]
-value = 16384  #16KiB
+value = 16384
 
+#400KiB
 [application_server.http.maximum_sending_buffer_size]
-value = 409600    #400KiB
+value = 409600
 
 [application_server.http.enable_connect_protocol]
 value = false
 
+#1MiB
 [application_server.http.maximum_header_list_size]
-value = 1048576    #1MiB
+value = 1048576
 
 [application_server.http.maximum_pending_accept_reset_streams]
 value = 20
