--- a/application/Cargo.toml
+++ b/application/Cargo.toml
@@ -20,7 +20,7 @@ bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, fe
 dedicated = { path = "./dedicated", package = "dedicated", version = "=1.0.0", default-features = true, features = [], optional = false }
 serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = false }
 uuid = { package = "uuid", version = "=1.10.0", default-features = true, features = ["v4"], optional = false }
-cargo-emit = { package = "cargo-emit", version = "=0.2.1", default-features = true, features = [], optional = false }
+cargo_emit = { package = "cargo-emit", version = "=0.2.1", default-features = true, features = [], optional = false }
 
 [workspace.lints]
 
@@ -137,10 +137,6 @@ incremental = true
 codegen-units = 256
 rpath = false
 
-[profile.dev.build-override]
-opt-level = 0
-codegen-units = 256
-
 [profile.release]
 opt-level = 3
 debug = false
@@ -151,7 +147,3 @@ panic = "unwind"
 incremental = false
 codegen-units = 1
 rpath = false
-
-[profile.release.build-override]
-opt-level = 3
-codegen-units = 1
