--- a/application/core/source/Cargo.toml
+++ b/application/core/source/Cargo.toml
@@ -1,3 +1,11 @@
+[package]
+name = "core"
+version = "1.0.0"
+authors.workspace = true
+rust-version.workspace = true
+edition = "2021"
+build = "./source/build.rs"
+
 [[bin]]
 name = "core"
 path = "./source/mod.rs"
@@ -7,16 +15,7 @@ bench = true
 doc = true
 proc-macro = false
 harness = true
-edition = "2021"
 required-features = []
-
-[package]
-name = "core"
-version = "1.0.0"
-authors.workspace = true
-rust-version.workspace = true
-edition = "2021"
-build = "./source/build.rs"
 
 [lints]
 workspace = true
@@ -34,7 +33,7 @@ deadpool_postgres = { package = "deadpool-postgres", version = "=0.14.0", defaul
 dedicated = { workspace = true }
 hmac = { package = "hmac", version = "=0.12.1", default-features = true, features = [], optional = false }
 http = { package = "http", version = "=1.1.0", default-features = true, features = [], optional = false }
-http-body-util = { package = "http-body-util", version = "=0.1.2", default-features = true, features = [], optional = false }
+http_body_util = { package = "http-body-util", version = "=0.1.2", default-features = true, features = [], optional = false }
 hyper = { package = "hyper", version = "=1.4.1", default-features = true, features = ["full"], optional = false }
 hyper_util = { package = "hyper-util", version = "=0.1.8", default-features = true, features = ["full"], optional = false }
 lettre = { package = "lettre", version = "=0.11.9", default-features = false, features = ["smtp-transport", "hostname", "builder", "tokio1"], optional = false }
@@ -57,7 +56,7 @@ tracing_appender = { package = "tracing-appender", version = "=0.2.3", default-f
 tracing_subscriber = { package = "tracing-subscriber", version = "=0.3.18", default-features = true, features = [], optional = false }
 
 [build-dependencies]
-cargo-emit = { workspace = true }
+cargo_emit = { workspace = true }
 uuid = { workspace = true }
 
 [features]
