--- a/application/core/source/environment/run_server.example.toml
+++ b/application/core/source/environment/run_server.example.toml
@@ -8,7 +8,10 @@
 value = 2
 
 # The IDs of processor logical cores for binding with. Value SHOULD not be equal to 'system.rayon.affinited_cores.value'.
-# The quantity of IDs SHOULD be equal to 'system.tokio.worker_threads_quantity.value'
+# The quantity of IDs SHOULD be equal to 'system.tokio.worker_threads_quantity.value'.
+#
+# It is important that in whole operating system other services do not bind to these same IDs.
+# That is, they should be affinited only with the current application's threads.
 [system.tokio.affinited_cores]
 value = [0, 1]
 
@@ -26,6 +29,9 @@ value = 3
 
 # The IDs of processor logical cores for binding with. Value SHOULD not be equal to 'system.tokio.affinited_cores.value'.
 # The quantity of IDs SHOULD be equal to 'system.rayon.threads_quantity.value'
+#
+# It is important that in whole operating system other services do not bind to these same IDs.
+# That is, they should be affinited only with the current application's threads.
 [system.rayon.affinited_cores]
 value = [2, 3, 4]
 
