--- a/application/core/source/Cargo.toml
+++ b/application/core/source/Cargo.toml
@@ -28,6 +28,7 @@ bytes = { package = "bytes", version = "=1.7.1", default-features = true, featur
 chrono = { package = "chrono", version = "=0.4.38", default-features = true, features = [], optional = false }
 clap = { package = "clap", version = "=4.5.17", default-features = true, features = ["cargo"], optional = false }
 const_format = { package = "const_format", version = "=0.2.33", default-features = true, features = [], optional = false }
+core_affinity = { package = "core_affinity", version = "=0.8.3", default-features = true, features = [], optional = false }
 deadpool = { package = "deadpool", version = "=0.12.1", default-features = true, features = ["rt_tokio_1"], optional = false }
 deadpool_postgres = { package = "deadpool-postgres", version = "=0.14.0", default-features = true, features = ["rt_tokio_1"], optional = false }
 dedicated = { workspace = true }
@@ -38,7 +39,6 @@ hyper = { package = "hyper", version = "=1.4.1", default-features = true, featur
 hyper_util = { package = "hyper-util", version = "=0.1.8", default-features = true, features = ["full"], optional = false }
 lettre = { package = "lettre", version = "=0.11.9", default-features = false, features = ["smtp-transport", "hostname", "builder", "tokio1"], optional = false }
 matchit = { package = "matchit", version = "=0.8.4", default-features = true, features = [], optional = false }
-num_cpus = { package = "num_cpus", version = "=1.16.0", default-features = true, features = [], optional = false }
 num_integer = { package = "num-integer", version = "=0.1.46", default-features = true, features = [], optional = false }
 rand = { package = "rand", version = "=0.8.5", default-features = true, features = [], optional = false }
 rayon = { package = "rayon", version = "=1.10.0", default-features = true, features = [], optional = false }
