--- a/application/rustfmt.toml
+++ b/application/rustfmt.toml
@@ -19,7 +19,7 @@ fn_call_width = 0
 fn_params_layout = "Tall"
 fn_single_line = false
 force_explicit_abi = true
-force_multiline_blocks = true
+force_multiline_blocks = false
 format_code_in_doc_comments = false
 doc_comment_code_block_width = 100
 format_generated_files = false
