--- a/application/rustfmt.toml
+++ b/application/rustfmt.toml
@@ -19,7 +19,7 @@ fn_call_width = 0
 fn_params_layout = "Tall"
 fn_single_line = false
 force_explicit_abi = true
-force_multiline_blocks = false
+force_multiline_blocks = true
 format_code_in_doc_comments = false
 doc_comment_code_block_width = 100
 format_generated_files = false
@@ -36,7 +36,7 @@ imports_indent = "Block"
 imports_layout = "Vertical"
 indent_style = "Block"
 inline_attribute_width = 0
-match_arm_blocks = true
+match_arm_blocks = false
 match_arm_leading_pipes = "Never"
 match_block_trailing_comma = false
 max_width = 180
